--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,52 @@
 version: '3.8'
-services:
-  db:
-    image: postgres:15
-    environment:
-      - POSTGRES_DB=postgres
-      - POSTGRES_PASSWORD=odoo
-      - POSTGRES_USER=odoo
-    volumes:
-      - odoo-db-data:/var/lib/postgresql/data
-    restart: always
 
+services:
   web:
     image: odoo:17.0
     depends_on:
       - db
+      - ml_engine  # AJOUTER CETTE LIGNE
     ports:
       - "8069:8069"
     volumes:
-      - odoo-web-data:/var/lib/odoo
-      - ./extra-addons:/mnt/extra-addons 
+      - odoo-data:/var/lib/odoo
+      - ./biomed_maintenance:/mnt/extra-addons/biomed_maintenance
     environment:
       - HOST=db
       - USER=odoo
       - PASSWORD=odoo
-    restart: always
+    networks:
+      - odoo_network  # IMPORTANT
+
+  db:
+    image: postgres:15
+    environment:
+      - POSTGRES_DB=postgres
+      - POSTGRES_USER=odoo
+      - POSTGRES_PASSWORD=odoo
+    volumes:
+      - db-data:/var/lib/postgresql/data
+    networks:
+      - odoo_network
+
+  ml_engine:
+    build: ./ml_engine
+    ports:
+      - "5000:5000"
+    volumes:
+      - ./ml_engine:/app
+    networks:
+      - odoo_network  # MÊME RÉSEAU QUE ODOO
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:5000/health || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
 
 volumes:
-  odoo-web-data:
-  odoo-db-data:
+  odoo-data:
+  db-data:
+
+networks:
+  odoo_network:
+    driver: bridge
